Mindless web page tweaking, trying to use the subversion page as a rough guide.
git-svn-id: http://current.tigris.org/svn/current/trunk@4 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h2>Current: A server for Red Hat's up2date tools</h2>
+<p align=center><img src="current-2.jpg" alt="current logo" align=top ></p>
 
 <h3>An open source server for Red Hat's up2date tools.</h3>
 
