--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<p align=center><img src="current-2.jpg" alt="current logo" align=top ></p>
+<p align=center><img src="current-2.jpg" alt="current logo" align=top height=100 width=300></p>
 
 <h3>An open source server for Red Hat's up2date tools.</h3>
 
