Fixed speling mistakes.
git-svn-id: http://current.tigris.org/svn/current/trunk@6 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -12,9 +12,9 @@
 
 <p> Red Hat's up2date is a suite of tools (sometimes called the Red Hat
 Network) for keeping a Red Hat Linux system "up to date" with new
-security/bugfix RPM's.  It also allows you to add completely new rpm's to
-clients over the network. The tools do a thorough job of handling bootloader
-configurations, new kernels, packages dependancies and conflicts.
+security/bug fix RPMs.  It also allows you to add completely new RPMs to
+clients over the network. The tools do a thorough job of handling boot-loader
+configurations, new kernels, packages dependencies and conflicts.
 </p>
 
 <p> Unfortunately, Red Hat has not released their server, which does not
