--- a/www/project_highlights.html
+++ b/www/project_highlights.html
@@ -3,6 +3,6 @@
 </head>
 
 <body>
-Development Version is 1.5.2, Stable Version is 1.4.2
+Development Version is jwbernin-postgres-branch, Stable Version is 1.4.2
 </body>
 </html>
