--- a/www/index.html
+++ b/www/index.html
@@ -139,7 +139,7 @@ enough python. :)
 
 <p align="center">
 <a href="http://www.python.org/">
-<img src="PythonPowered.gif" alt="Python"/>
+<img src="PythonPowered.gif" border="0" alt="Python"/>
 </a>
 </p>
 
