--- a/www/index.html
+++ b/www/index.html
@@ -129,7 +129,7 @@ enough python. :)
 
 <h3>Related Resources</h3>
 <ul>
-<li><a href="http://rhn.redhat.com">Red Hat Network website - If current doesn't meet your needs, go here. This WILL. Thanks to Red Hat for an excellent client.</a>
+<li><a href="http://rhn.redhat.com">Red Hat Network website</a> - If current doesn't meet your needs, go here. This WILL. Thanks to Red Hat for an excellent client.
 <li><a href="http://www.python.org">The Python home page</a>
 <li><a href="http://httpd.apache.org">The apache web server</a>
 <li><a href="http://www.modpython.org">The mod_python apache module</a>
