--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,6 @@
     
 <html>
 <head>
-<title>Current: A server for Red Hat's up2date tools</title>
 </head>
 <body>
 
@@ -19,17 +18,16 @@
 <p/>
 -->
 
-Current is an open source implementation for Red Hat's up2date tools.
-
 <h3>Mission</h3>
 
-To completely reimplement a correct server for all of Red Hat's excellent
+To completely implement a correct server for all of Red Hat's excellent
 up2date tools. Current is not expected to scale to the same mammoth
 proportions, but it should be fast enough and capable enough to support
 several hundred machines without driving the sysadmins mad.
 <p/>
 
-<h3>Accomplishments</h3>
+
+<h3>Features</h3>
 <ul>
 <li>Production quality for 2.7 and 2.8 clients with a Red Hat 7.x server.
 <li>Experimental support for 3.0 clients and Red Hat 8.0 as a server.
@@ -37,6 +35,7 @@ several hundred machines without driving the sysadmins mad.
 <li>As easy to setup for the admin as we can make it.
 </ul>
 <p/>
+
 
 <h3>News</h3>
 <ul>
@@ -57,6 +56,7 @@ But if you're reading this, you probably already knew that.
 
 </ul>
 
+
 <a name="download"/>
 <h3>Downloads</h3>
 <p>
@@ -66,16 +66,15 @@ But if you're reading this, you probably already knew that.
 <li>
 Latest source:<br/>
 The source is stored in tigris.org's CVS system. Please see the help menu
-to the right (or click on the Source Code link at the top left) to get 
+to the left (or click on the Source Code link at the top left) to get 
 or browse our CVS repository.
 
 <p/>
 <b>Releases</b>
 <li>
-For actual tar balls or installable rpms, please 
+For actual tar-balls or installable rpms, please 
 <a href="http://current.tigris.org/servlets/ProjectDocumentList">download them
 </a>from here.
-
 
 <p/>
 <li>We'll maintain the existing ftp repository 
@@ -94,8 +93,14 @@ BUG, you can also/instead attach it to our
 Issue Tracker</a>.
 <p/>
 
+If you want to add a bug/rfe/whatever to the 
+<a href="http://rapidsvn.tigris.org/servlets/ProjectIssues">Issue Tracker</a> 
+without registering with tigris.org, just send them to the dev or users list. 
+(If you are registered, you do not have to join current.)
+We'll add it.
 
-<h3>Ideas on the table</h3>
+
+<h3>Future Directions</h3>
 <p>
 Naturally, supporting new versions of the client and making current work
 on newer releases of Red Hat Linux are a priority. Other areas we look 
