I didn't change rapidsvn to current for all the links. Yes, we stole their home page - they did it better. :)
git-svn-id: http://current.tigris.org/svn/current/trunk@43 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -86,15 +86,15 @@ who needs it.
 
 <h3>Contributing</h3>
 To discuss ideas, bug fixes, or submit patches then join the development 
-<a href="http://rapidsvn.tigris.org/servlets/ProjectMailingListList">
+<a href="http://current.tigris.org/servlets/ProjectMailingListList">
 mailing list</a>. If your patch implements an existing RFE or fixes a known
 BUG, you can also/instead attach it to our 
-<a href="http://rapidsvn.tigris.org/servlets/ProjectIssues">
+<a href="http://current.tigris.org/servlets/ProjectIssues">
 Issue Tracker</a>.
 <p/>
 
 If you want to add a bug/rfe/whatever to the 
-<a href="http://rapidsvn.tigris.org/servlets/ProjectIssues">Issue Tracker</a> 
+<a href="http://current.tigris.org/servlets/ProjectIssues">Issue Tracker</a> 
 without registering with tigris.org, just send them to the dev or users list. 
 (If you are registered, you do not have to join current.)
 We'll add it.
