Changes to web pages for the 1.4.3 release, and the fact that postgres work is now on the trunk.
git-svn-id: http://current.tigris.org/svn/current/trunk@64 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/project_highlights.html
+++ b/www/project_highlights.html
@@ -3,6 +3,6 @@
 </head>
 
 <body>
-Development Version is jwbernin-postgres-branch, Stable Version is 1.4.2
+Development Version is trunk (tag: HEAD), Stable Version is 1.4.3
 </body>
 </html>
