--- a/www/index.html
+++ b/www/index.html
@@ -29,8 +29,8 @@ several hundred machines without driving the sysadmins mad.
 
 <h3>Features</h3>
 <ul>
-<li>Production quality for 2.7 and 2.8 clients with a Red Hat 7.x server.
-<li>Experimental support for 3.0 clients and Red Hat 8.0 as a server.
+<li>Production quality for 2.7 and 2.8 clients with a Red Hat 7.x/8.0 server.
+<li>Experimental support for 3.0 clients.
 <li>Full database backend in development (and working).
 <li>As easy to setup for the admin as we can make it.
 </ul>
@@ -39,6 +39,13 @@ several hundred machines without driving the sysadmins mad.
 
 <h3>News</h3>
 <ul>
+<li><b>[20 Feb 2003] Released 1.4.3</b>
+<br/>
+Release 1.4.3 fixes a couple of minor bugs, and provides RHL 8.0 
+compatibility if you have a new enough mod_python.
+Full up2date 3.0/3.1 support will be coming in 1.4.4.
+<p/>
+
 <li><b>[30 Jan 2003] Annouced the mailing list is splitting</b>
 <br/>
 Now that we're hosted at current.tigris.org, we can take advantage of 
@@ -108,10 +115,10 @@ forward to:
 
 <ul>
 <li> Full SQL backend database: <br/>
-Development is ongoing on the jwbernin-postgres-branch. The 1.5.x series will
-simply reimplement the features we have now, but with a much saner SQL 
-based backend (and enough changes to sanely support it). John's spearheading
-this campaign.
+Development is ongoing on the trunk. The 1.5.x series will simply
+reimplement the features we have now, but with a much saner SQL based
+backend (and enough changes to sanely support it). John's spearheading this
+campaign.
 
 <p/>
 <li> Basic client management: <br/>
