Added IRC reference.
git-svn-id: http://current.tigris.org/svn/current/trunk@65 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -98,8 +98,11 @@ mailing list</a>. If your patch implements an existing RFE or fixes a known
 BUG, you can also/instead attach it to our 
 <a href="http://current.tigris.org/servlets/ProjectIssues">
 Issue Tracker</a>.
-<p/>
 
+<p/>
+You can usually find one of us on IRC on irc.freenode.net in #current. 
+
+<p/>
 If you want to add a bug/rfe/whatever to the 
 <a href="http://current.tigris.org/servlets/ProjectIssues">Issue Tracker</a> 
 without registering with tigris.org, just send them to the dev or users list. 
