Typo bug report from #current. First IRC bug report. Cool.
git-svn-id: http://current.tigris.org/svn/current/trunk@66 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -85,7 +85,7 @@ For actual tar-balls or installable rpms, please
 
 <p/>
 <li>We'll maintain the existing ftp repository 
-<a href="fto://ftp.biology.duke.edu/pub/admin/current">here, </a> for anyone 
+<a href="ftp://ftp.biology.duke.edu/pub/admin/current">here, </a> for anyone 
 who needs it.
 
 </ul>
