--- a/www/index.html
+++ b/www/index.html
@@ -29,36 +29,20 @@ several hundred machines without driving the sysadmins mad.
 
 <h3>Features</h3>
 <ul>
-<li>Production quality for 2.7 and 2.8 clients with a Red Hat 7.x/8.0 server.
-<li>Experimental support for 3.0 clients.
+<li>Production quality for 2.7 to 3.1 clients with a Red Hat Linux 7.2, 7.3, 8.0 and 9 server.
 <li>Full database backend in development (and working).
 <li>As easy to setup for the admin as we can make it.
 </ul>
 <p/>
 
 
-<h3>News</h3>
+<h3>Recent News</h3>
 <ul>
-<li><b>[20 Feb 2003] Released 1.4.3</b>
-<br/>
-Release 1.4.3 fixes a couple of minor bugs, and provides RHL 8.0 
-compatibility if you have a new enough mod_python.
-Full up2date 3.0/3.1 support will be coming in 1.4.4.
-<p/>
 
-<li><b>[30 Jan 2003] Annouced the mailing list is splitting</b>
+<li><b>[12 Jun 2003] Released 1.4.4</b>
 <br/>
-Now that we're hosted at current.tigris.org, we can take advantage of 
-the additional mailing lists provided. (And a big Thank You to Seth Vidal
-at Dulug for providing our old list). Please go to the 
-<a href="http://current.tigris.org/servlets/ProjectMailingListList">current
-mailing list page</a>  to subscribe to one of the new lists. We'll gradually
-transition from the old list over the next month.
-<p/>
-
-<li><b>[26 Jan 2003] Now proudly hosted at tigris.org</b>
-<br/>
-But if you're reading this, you probably already knew that.
+Release 1.4.4 provides full compatibility with all recent versions of 
+Red Hat (both server and client)
 <p/>
 
 </ul>
