Add news item for faq.
git-svn-id: http://current.tigris.org/svn/current/trunk@129 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,12 @@ several hundred machines without driving the sysadmins mad.
 <h3>Recent News</h3>
 <ul>
 
+<li><b>[24 Jun 2003] Added an FAQ to the website</b>
+<br/>
+We now have an online <a href="faq.html">FAQ</a> from Scott Schmit! 
+Thanks Scott.
+<p/>
+
 <li><b>[12 Jun 2003] Released 1.4.4</b>
 <br/>
 Release 1.4.4 provides full compatibility with all recent versions of 
