Updating CVS to 1.5.6 with your's truely as new maintainer.
git-svn-id: http://current.tigris.org/svn/current/trunk@149 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -24,59 +24,65 @@ To completely implement a correct server for all of Red Hat's excellent
 up2date tools. Current is not expected to scale to the same mammoth
 proportions, but it should be fast enough and capable enough to support
 several hundred machines without driving the sysadmins mad.
-<p/>
 
 
 <h3>Features</h3>
 <ul>
-<li>Production quality for 2.7 to 3.1 clients with a Red Hat Linux 7.2, 7.3, 8.0 and 9 server.
-<li>Full database backend in development (and working).
-<li>As easy to setup for the admin as we can make it.
+    <li>Production quality for 2.7 to 4.3 clients with a Fedora Core 1, 2, 3, or Red Hat Enterprise Linux 3 server.</li>
+    <li>Full database backend in development (and working).</li>
+    <li>As easy to setup for the admin as we can make it.</li>
 </ul>
-<p/>
 
 
 <h3>Recent News</h3>
 <ul>
 
+    <li><b>[04 Oct 2004] New Maintainer, New Development Version</b>
+    <p>Jack Neely is the new maintainer for the Current project.  Hunter
+    is still on board and we are working together as co-maintainers.  I
+    think Current is a worthy project and would like to see it continue.</p>
+    <p>I've beaten CVS head into submission and am releasing a new 
+    development version 1.5.6 with a re-worked database layer.</p></li>
+    
 <li><b>[24 Jun 2003] Added an FAQ to the website</b>
-<br/>
-We now have an online <a href="faq.html">FAQ</a> from Scott Schmit! 
-Thanks Scott.
-<p/>
+<p>We now have an online <a href="faq.html">FAQ</a> from Scott Schmit! 
+Thanks Scott.</p></li>
 
 <li><b>[12 Jun 2003] Released 1.4.4</b>
-<br/>
+<p>
 Release 1.4.4 provides full compatibility with all recent versions of 
 Red Hat (both server and client)
-<p/>
+</p></li>
 
 </ul>
 
 
-<a name="download"/>
+<a name="download"></a>
 <h3>Downloads</h3>
-<p>
 
 <ul>
-<b>Source Code</b>
-<li>
-Latest source:<br/>
+    <li>
+    <p><b>Releases -</b> All source code and RPM packages of Current 
+    releases can be downloaded from the <a href="http://current.tigris.org/servlets/ProjectDocumentList">Documents and Files</a> section.</p></li>
+
+    
+    <li><p><b>Source Code Control -</b>
 The source is stored in tigris.org's CVS system. Please see the help menu
 to the left (or click on the Source Code link at the top left) to get 
-or browse our CVS repository.
+or browse our CVS repository.</p>
+<p>As of October 4th, 2004 I have moved the main development over to a
+Subversion server.  To take part in active development you will want to 
+get the latest source code by pointing your web browser or your Subversion
+client to <a href="https://svn.linux.ncsu.edu/svn/slack/trunk/current">
+    https://svn.linux.ncsu.edu/svn/slack/trunk/current</a>.  Releases
+will still be committed to Tigris's CVS system.</p>
 
-<p/>
-<b>Releases</b>
-<li>
-For actual tar-balls or installable rpms, please 
-<a href="http://current.tigris.org/servlets/ProjectDocumentList">download them
-</a>from here.
-
-<p/>
-<li>We'll maintain the existing ftp repository 
-<a href="ftp://ftp.biology.duke.edu/pub/admin/current">here, </a> for anyone 
-who needs it.
+<li><p><b>FTP -</b>
+Hunter's Current ftp repository 
+<a href="ftp://ftp.biology.duke.edu/pub/admin/current">here</a>.
+Jack's Current ftp repository is 
+<a href="ftp://ftp.quackmaster.net/current">here</a>.
+</p></li>
 
 </ul>
 
