Syncing to Tigris's CVS server.  This is Current 1.5.7
git-svn-id: http://current.tigris.org/svn/current/trunk@152 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,10 @@ several hundred machines without driving the sysadmins mad.</p>
 <h3>Recent News</h3>
 <ul>
 
+    <li><b>[18 Oct 2004] Current Version 1.5.7</b>
+    <p>A new development version of Current with support for both
+    PostgreSQL and SQLite.</p></li>
+
     <li><b>[04 Oct 2004] New Maintainer, New Development Version</b>
     <p>Jack Neely is the new maintainer for the Current project.  Hunter
     is still on board and we are working together as co-maintainers.  I
