Update website to reflect new version.
git-svn-id: http://current.tigris.org/svn/current/trunk@156 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,10 @@ several hundred machines without driving the sysadmins mad.</p>
 <h3>Recent News</h3>
 <ul>
 
+    <li><b>[14 Dec 2004] Current Version 1.5.8</b>
+    <p>This development version fixes up2date tracebacks.  There were
+    errors in the XML files the 1.5.7 generated.</p></li>
+
     <li><b>[18 Oct 2004] Current Version 1.5.7</b>
     <p>A new development version of Current with support for both
     PostgreSQL and SQLite.</p></li>
