--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,11 @@ several hundred machines without driving the sysadmins mad.</p>
 <h3>Recent News</h3>
 <ul>
 
+    <li><b>[02 Jan 2005] Current Version 1.5.9</b>
+    <p>New development version of Current.  This incorperates the
+    last major schema change for 1.6.  Please test!  1.6.0 is VERY
+    close.</p></li>
+
     <li><b>[14 Dec 2004] Current Version 1.5.8</b>
     <p>This development version fixes up2date tracebacks.  There were
     errors in the XML files the 1.5.7 generated.</p></li>
