--- a/www/project_highlights.html
+++ b/www/project_highlights.html
@@ -3,6 +3,6 @@
 </head>
 
 <body>
-    Development Version is 1.5.8, Stable Version is 1.4.4
+    Development Version is 1.5.9, New Stable Version 1.6.0 Coming Soon
 </body>
 </html>
