--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,10 @@ several hundred machines without driving the sysadmins mad.</p>
 <h3>Recent News</h3>
 <ul>
 
+    <li><b>[05 Jan 2005] Current Version 1.5.10</b>
+    <p>This is the brown paper bag release of 1.5.9.  In .10 you
+    can add directories.  Oooo...</p></li>
+    
     <li><b>[02 Jan 2005] Current Version 1.5.9</b>
     <p>New development version of Current.  This incorperates the
     last major schema change for 1.6.  Please test!  1.6.0 is VERY
