--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,10 @@ several hundred machines without driving the sysadmins mad.</p>
 <h3>Recent News</h3>
 <ul>
 
+    <li><b>[20 Feb 2005] Current Version 1.5.11</b>
+    <p>MySQL support and lots of bug fixes.  Updated <a href="faq.html">FAQ</a>
+    too.  Last 1.5.x version!  On to 1.6!</p></li>
+
     <li><b>[05 Jan 2005] Current Version 1.5.10</b>
     <p>This is the brown paper bag release of 1.5.9.  In .10 you
     can add directories.  Oooo...</p></li>
@@ -45,14 +49,6 @@ several hundred machines without driving the sysadmins mad.</p>
     <p>New development version of Current.  This incorperates the
     last major schema change for 1.6.  Please test!  1.6.0 is VERY
     close.</p></li>
-
-    <li><b>[14 Dec 2004] Current Version 1.5.8</b>
-    <p>This development version fixes up2date tracebacks.  There were
-    errors in the XML files the 1.5.7 generated.</p></li>
-
-    <li><b>[18 Oct 2004] Current Version 1.5.7</b>
-    <p>A new development version of Current with support for both
-    PostgreSQL and SQLite.</p></li>
 
     <li><b>[04 Oct 2004] New Maintainer, New Development Version</b>
     <p>Jack Neely is the new maintainer for the Current project.  Hunter
