Web page updates for 1.6.0
git-svn-id: http://current.tigris.org/svn/current/trunk@167 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/project_highlights.html
+++ b/www/project_highlights.html
@@ -3,6 +3,6 @@
 </head>
 
 <body>
-    Development Version is 1.5.91 AKA Current 1.6.0 Release Canidate 1
+    Stable Version: Current 1.6.0
 </body>
 </html>
