"guide"  guide has an 'e' on the end
git-svn-id: http://current.tigris.org/svn/current/trunk@168 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -76,7 +76,7 @@ Red Hat (both server and client)
 
 <ul>
 
-    <li><p><b><a href="current-guid/">Current Manual</a> - </b>This is the
+    <li><p><b><a href="current-guide/">Current Manual</a> - </b>This is the
     manual as shipped with 1.6.0.  This should contain full blown
     instructions for everything in Current.  Of course it doesn't, but
     you are welcome to patch the DocBook source in the Current tar balls,
