Final commit for version 1.7.2
git-svn-id: http://current.tigris.org/svn/current/trunk@176 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@ several hundred machines without driving the sysadmins mad.</p>
 <ul>
     <li>Production quality for 2.7 to 4.3 clients with a Fedora Core 1, 2, 3, or Red Hat Enterprise Linux 3, or 4 server.</li>
     <li>Full SQL database backend.</li>
+    <li>Web Interface in the devel series.</li>
     <li>As easy to setup for the admin as we can make it.</li>
 </ul>
 
@@ -37,6 +38,11 @@ several hundred machines without driving the sysadmins mad.</p>
 <h3>Recent News</h3>
 <ul>
 
+    <li><b>[29 May 2005] Current 1.7.2</b>
+    <img src="screenshot01.jpg" align="right" />
+    <p>This version lays out some examples, classes and templates for
+    creating a web interface.  Even have some CSS.  Folks, this is where the 
+    fun starts.</p>
     <li><b>[04 Apr 2005] Current 1.7.1</b>
     <p>Kick off a new development branch with Current 1.7.1.  The code
     changes are mostly the beginnings of some ideas right now.  Most
@@ -48,15 +54,6 @@ several hundred machines without driving the sysadmins mad.</p>
     tweeks when compared to 1.5.91.  Y'all let me know how it
     breaks.</p></li>
     
-    <li><b>[27 Feb 2005] Current 1.6.0 Release Canidate 1</b>
-    <p>Also known as version 1.5.91.  This is the first release canidate
-    for 1.6.0.  Please beat on this.  The 1.6.x line is considered frozen
-    and only bug fixes will be accepted.</p></li>
-
-    <li><b>[20 Feb 2005] Current Version 1.5.11</b>
-    <p>MySQL support and lots of bug fixes.  Updated <a href="faq.html">FAQ</a>
-    too.  Last 1.5.x version!  On to 1.6!</p></li>
-
     <li><b>[04 Oct 2004] New Maintainer, New Development Version</b>
     <p>Jack Neely is the new maintainer for the Current project.  Hunter
     is still on board and we are working together as co-maintainers.  I
