The bit about monitoring should not have been on the web page.
git-svn-id: http://current.tigris.org/svn/current/trunk@187 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/www/index.html
+++ b/www/index.html
@@ -22,8 +22,8 @@
 
 <p>To create an open source Advanced Management System for Linux machines.  
 This is a web based system administrator's tool that is capable of deploying
-package updates and errata, monitoring the hardware and software state of each
-machine, and dispatching administrative tasks to each machine.
+package updates and errata and managing the state of each client.  Ideally,
+we want to be what cfengine is to configuration files to state management.
 A part of this is to implement a correct server for all of Red Hat's
 excellent up2date tools and be able to scale to thousands of machines.</p>
 
